@@ -1,3 +1,4 @@
+Micro tab: Fixed: The ions and molecules can fly out of the solution when you add solute
 # 0.00.82 (54873) Aug 4, 2011
 Micro tab: Prevent dissolving from crystals during evaporation
 Micro tab: Removed the "dash mark" near the play button
